--- a/style.css
+++ b/style.css
@@ -1,48 +1,74 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-  background: #2c3e50;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 16px;
-}
-
 body {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
+  background: #f2f2f2;
+  padding: 0;
+  margin: 0;
 }
 
-h1 {
-  color: #f1c40f;
-  font-size: 4rem;
-  text-transform: uppercase;
-  display: block;
-  width: 100%;
-  text-align: center;
+/*--------------------*/
 
-  @media screen and (max-width: 600px) {
-    font-size: 3rem;
-  }
+#green-menu {
+padding-left: 43%;
+width: 100%;
+height: 40px;
+background:#373737;
+background-image:linear-gradient(to bottom, #373737, #242424);
+border-bottom:2px solid #62bd00;
+
+box-shadow:0px 0px 4px #cccccc;
+-moz-box-shadow:0px 0px 4px #cccccc;
+-webkit-box-shadow:0px 0px 4px #cccccc;
+-o-box-shadow:0px 0px 4px #cccccc;
+
+font: 14px 'Nunito' , sans-serif;
 }
 
-
-a:link, a:visited, a:active {
-    background-color: #2c3e50;
-    color: #e74c3c;
-    border: 2px solid #e74c3c;
-    border-radius: 4px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: #e74c3c;
-    display: inline-block;
-    font-size: 20px;
+#green-menu a {
+width:auto;
+height:40px;
+display:inline-block;
+background:transparent;
+overflow:hidden;
+float:left;
+text-decoration:none;
+color:#ffffff;
 }
 
-a:hover {
-    background-color: #e74c3c;
-    color: white;
-  }
+#green-menu h5 {
+margin:0px;
+height:40px;
+line-height:40px;
+text-align:center;
+background:#373737;
+background-image:linear-gradient(to bottom, #373737, #242424);
+
+transition:all 0.2s linear;
+-moz-transition:all 0.2s linear;
+-webkit-transition:all 0.2s linear;
+-o-transition:all 0.2s linear;
+}
+
+#green-menu a:hover h5 {
+margin-top:-40px;
+}
+
+#green-menu div {
+width:auto;
+height:28px;
+display:block;
+background:#62bd00;
+overflow:hidden;
+padding-right:4px;
+padding-left:4px;
+padding-top:12px;
+color:#ffffff;
+cursor:pointer;
+
+transition:all 0.2s linear;
+-moz-transition:all 0.2s linear;
+-webkit-transition:all 0.2s linear;
+-o-transition:all 0.2s linear;
+}
+
+#green-menu a:hover div {
+opacity:1;
+}
