--- a/style.css
+++ b/style.css
@@ -1,74 +1,1 @@
-body {
-  background: #f2f2f2;
-  padding: 0;
-  margin: 0;
-}
-
-/*--------------------*/
-
-#green-menu {
-padding-left: 43%;
-width: 100%;
-height: 40px;
-background:#373737;
-background-image:linear-gradient(to bottom, #373737, #242424);
-border-bottom:2px solid #62bd00;
-
-box-shadow:0px 0px 4px #cccccc;
--moz-box-shadow:0px 0px 4px #cccccc;
--webkit-box-shadow:0px 0px 4px #cccccc;
--o-box-shadow:0px 0px 4px #cccccc;
-
-font: 14px 'Nunito' , sans-serif;
-}
-
-#green-menu a {
-width:auto;
-height:40px;
-display:inline-block;
-background:transparent;
-overflow:hidden;
-float:left;
-text-decoration:none;
-color:#ffffff;
-}
-
-#green-menu h5 {
-margin:0px;
-height:40px;
-line-height:40px;
-text-align:center;
-background:#373737;
-background-image:linear-gradient(to bottom, #373737, #242424);
-
-transition:all 0.2s linear;
--moz-transition:all 0.2s linear;
--webkit-transition:all 0.2s linear;
--o-transition:all 0.2s linear;
-}
-
-#green-menu a:hover h5 {
-margin-top:-40px;
-}
-
-#green-menu div {
-width:auto;
-height:28px;
-display:block;
-background:#62bd00;
-overflow:hidden;
-padding-right:4px;
-padding-left:4px;
-padding-top:12px;
-color:#ffffff;
-cursor:pointer;
-
-transition:all 0.2s linear;
--moz-transition:all 0.2s linear;
--webkit-transition:all 0.2s linear;
--o-transition:all 0.2s linear;
-}
-
-#green-menu a:hover div {
-opacity:1;
-}
+#green-menu,#green-menu h5{height:40px;background:#373737}#green-menu a,#green-menu div{width:auto;overflow:hidden;color:#fff}body{background:#f2f2f2;padding:0;margin:0}#green-menu{padding-left:43%;width:100%;background-image:linear-gradient(to bottom,#373737,#242424);border-bottom:2px solid #62bd00;box-shadow:0 0 4px #ccc;-moz-box-shadow:0 0 4px #ccc;-webkit-box-shadow:0 0 4px #ccc;-o-box-shadow:0 0 4px #ccc;font:14px Nunito,sans-serif}#green-menu a{height:40px;display:inline-block;background:0 0;float:left;text-decoration:none}#green-menu h5{margin:0;line-height:40px;text-align:center;background-image:linear-gradient(to bottom,#373737,#242424);transition:all .2s linear;-moz-transition:all .2s linear;-webkit-transition:all .2s linear;-o-transition:all .2s linear}#green-menu a:hover h5{margin-top:-40px}#green-menu div{height:28px;display:block;background:#62bd00;padding-right:4px;padding-left:4px;padding-top:12px;cursor:pointer;transition:all .2s linear;-moz-transition:all .2s linear;-webkit-transition:all .2s linear;-o-transition:all .2s linear}#green-menu a:hover div{opacity:1}
